v0.0.1/modules/schema/pages/class/FloatQuantity.adoc
= `FloatQuantity`
:toclevels: 4


+++Quantity with float value and associated unit information.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FloatQuantity`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`FloatQuantity`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<multiplier,`multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Unit multiplier of this quantity.+++

| <<unit,`unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Unit of this quantity.+++

| <<value,`value`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Value of this quantity.+++
|===

'''


//[discrete]
[#multiplier]
=== `multiplier`
+++Unit multiplier of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FloatQuantity.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]


|===

//[discrete]
[#unit]
=== `unit`
+++Unit of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FloatQuantity.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]


|===

//[discrete]
[#value]
=== `value`
+++Value of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FloatQuantity.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


